save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -92,7 +92,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 		   (<code>ex:more-crime-happens-in-cities</code>) plus a snapshot of the content of the current version (<code>ex:postContent0</code>). Derek also adds additional metadata of the post, like the title.
 		   </p>
 		   <p>
-		   However, inmediately after having published the post, Derek detects a typo. He does not want to record the activity that led to the new version, so he just creates a new version and 
+		   However, shortly after having published the post, Derek detects a typo. He does not want to record the activity that led to the new version, so he just creates a new version and 
 		   summarizes the changes in a revision of the original post(<code>ex:post9821v2</code>). This revision is also a specialization of the original post, since it is a refined version. 
          Thus, the permalink to the latest version (<code>ex:more-crime-happens-in-cities</code>) remains the same in the new revision, but a different URL is given for its snapshot (<code>ex:postContent1</code>).
 		   </p>		   
