save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -95,7 +95,7 @@ asserted unless it adds additional information.
       </p>
 
       <p>In subfigure <strong>a</strong> the <span class="repeated">prov:qualifiedUsage</span> property parallels the <span class="repeated">prov:used</span> property and references an instance of 
-      <span class="repeated">prov:Usage</span>, which in trun provides attributes of the <span class="repeated">prov:used</span> relation between the Activity and Entity. 
+      <span class="repeated">prov:Usage</span>, which in turn provides attributes of the <span class="repeated">prov:used</span> relation between the Activity and Entity. 
       The <span class="repeated">prov:entity</span> property is used to cite the Entity that was used by the Activity. 
       In this case, the time that the Activity used the Entity is provided using the <a href=#atTime" class="qname">prov:atTime</a> property and a literal 
       <span class="repeated">xsd:dateTime</span> value. The <span class="repeated">prov:atTime</span> property can be used to describe any 
