--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -77,4 +77,11 @@
       <p>Finally, the example states that the agent <code>ex:derek</code> acted on behalf of the organization <code>ex:chartgen</code>.
       </p>   
 
+      <div id="narrative-example-simple-1-figure" style="text-align: center;" class="figure">
+            <img src="http://dvcs.w3.org/hg/prov/raw-file/7c11a20b836e/ontology/diagram-history/2012-07-09-david/example1.svg"
+                 style="width: 60%; min-width: 25em; max-width: 60em" 
+                 alt="Illustration of Derek making a bar chart from some aggregated government data."/>
+            <div class="figcaption"><a href="#starting-points-figure">Figure 1</a>. The three Starting Point classes and the properties that relate them.</div>
+      </div>
+
 	  </section> <!-- Starting Points  in PROV-O -->
