--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -81,7 +81,7 @@
             <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-07-09-david/starting-points-example.svg"
                  style="width: 90%; min-width: 25em; max-width: 60em" 
                  alt="Illustration of Derek making a bar chart from some aggregated government data."/>
-            <div class="figcaption"><a href="narrative-example-simple-1-figure">Figure 2</a>. The three Starting Point classes and the properties that relate them.</div>
+            <div class="figcaption"><a href="#narrative-example-simple-1-figure">Figure 2</a>. The three Starting Point classes and the properties that relate them.</div>
       </div>
 
 	  </section> <!-- Starting Points  in PROV-O -->
