--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -8,11 +8,16 @@
          <a href="#prov-expanded-owl-terms-at-a-glance">Expanded</a> categories.  
       The Qualification Pattern consists of restating the unqualified
          relation by using an intermediate class that represents the influence between two resources. 
-      This new instance, in turn, can be annotated with additional descriptions about the influence relationships between the two resources cited. 
+      This new instance, in turn, can be annotated with additional descriptions about the influence relationship between the two resources cited. 
       The following two tables list the relations that can be qualified using the Qualification Pattern, along with the properties used to qualify them. 
-      For example, the first table's third row indicates that when we want to elaborate the association (<span class="repeated">prov:wasAssociatedWith</span>) that an 
-      Agent had upon an Activity, we can create an instance of <span class="repeated">prov:Association</span> 
-      and use that to express additional descriptions about the influence that the Agent had upon the Activity.  
+
+      For example, the second row of the first table indicates that when we want to elaborate how an <span class="repeated">prov:Activity</span>
+      <span class="repeated">prov:used</span> a particular <span class="repeated">prov:Entity</span>, we create an instance of <span class="repeated">prov:Usage</span>.
+      While the <span class="repeated">prov:Usage</span> cites the influencing entity with the <span class="repeated">prov:entity</span> property,
+      the influenced <span class="repeated">prov:Activity</span> cites the <span class="repeated">prov:Usage</span> with the property <span class="repeated">prov:qualifiedUsage</span>.
+
+      <!-- For example, the first table's third row indicates that when we want to elaborate the association (prov:wasAssociatedWith) that an 
+         Agent had upon an Activity, we can create an instance of prov:Association and use that to express additional descriptions about the influence that the Agent had upon the Activity. -->
       </p>
 
       <div id="qualified-forms-starting-point" style="padding: 10px">
