save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -15,6 +15,7 @@
       <span class="repeated">prov:used</span> a particular <span class="repeated">prov:Entity</span>, one creates an instance of <span class="repeated">prov:Usage</span>.
       While the <span class="repeated">prov:Usage</span> cites the influencing entity with the <span class="repeated">prov:entity</span> property,
       the influenced <span class="repeated">prov:Activity</span> cites the <span class="repeated">prov:Usage</span> with the property <span class="repeated">prov:qualifiedUsage</span>.
+      This structure is illustrated in <a href="#qualified-terms-figure">Figure 4a</a> below.
 
       <!-- For example, the first table's third row indicates that when we want to elaborate the association (prov:wasAssociatedWith) that an 
          Agent had upon an Activity, we can create an instance of prov:Association and use that to express additional descriptions about the influence that the Agent had upon the Activity. -->
