save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -9,7 +9,7 @@
       The Qualification Pattern consists of restating the unqualified
          relation by using an intermediate class that represents the influence between two resources. 
       This new instance, in turn, can be annotated with additional descriptions about the influence relationship between the two resources cited. 
-      The following two tables list the relations that can be qualified using the Qualification Pattern, along with the properties used to qualify them. 
+      The following two tables list the influence relations that can be qualified using the Qualification Pattern, along with the properties used to qualify them. 
 
       For example, the second row of the first table indicates that to elaborate how an <span class="repeated">prov:Activity</span>
       <span class="repeated">prov:used</span> a particular <span class="repeated">prov:Entity</span>, one creates an instance of <span class="repeated">prov:Usage</span>.
@@ -22,7 +22,7 @@
       </p>
 
       <div id="qualified-forms-starting-point" style="padding: 10px">
-         <p>Seven <a href="#description-starting-point-terms">Starting Point</a> relations that can be further described using the Qualification Pattern, along with qualification property, influence class, and influencer properties.
+         <p>Seven <a href="#description-starting-point-terms">Starting Point</a> relations that can be further described using the Qualification Pattern.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-starting-point.html" %}
@@ -30,7 +30,7 @@
       </div>
 
       <div id="qualified-forms-expanded" style="padding: 10px">
-         <p>Six <a href="#description-expanded-terms">Expanded</a> relations that can be further described using the Qualification Pattern, along with qualification property, influence class, and influencer properties.
+         <p>Six <a href="#description-expanded-terms">Expanded</a> relations that can be further described using the Qualification Pattern.
          </p>
          <div style="text-align: center">
             {% include "includes/qualifed-forms-expanded.html" %}
