save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -83,7 +83,7 @@
             :e1Gen 
                a prov:Generation;
                prov:activity :a1;               # Cite the influencing Activity.
-               :foo :bar;
+               :foo :bar;                       # Add additional attributes about the influence relation.
             .
             </pre>
 
