save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -51,7 +51,7 @@
          <a class="qname" href="#activity">prov:activity</a>, or
          <a class="qname" href="#agent">prov:agent</a>, respectively).
 
-         <div about="#narrative-example-qualified-1" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
+         <div id="narrative-example-qualified-1" about="#narrative-example-qualified-1" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
             <p>
                <a href="#narrative-example-qualified-1"/>Example 6</a>:
             </p>
@@ -74,7 +74,7 @@
             From this, the influence relation above can be restated with the <em>qualification pattern</em> as:
          </p>
 
-         <div about="#narrative-example-qualified-2" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
+         <div id="narrative-example-qualified-2" about="#narrative-example-qualified-2" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
             <p>
                <a href="#narrative-example-qualified-2"/>Example 7</a>:
             </p>
@@ -161,7 +161,7 @@
       <p>The following two examples show the result of applying the Usage and Association patterns to the chart making example from <a href=#description-starting-point-terms>Section 3.1</a>.
       </p>
 
-      <div about="#narrative-example-qualified-3" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
+      <div id="narrative-example-qualified-3" about="#narrative-example-qualified-3" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
          <p>
             <a href="#narrative-example-qualified-3"/>Example 8</a>:
          </p>
@@ -173,7 +173,7 @@
           </div>
       </div>
 
-      <div about="#narrative-example-qualified-4" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
+      <div id="narrative-example-qualified-4" about="#narrative-example-qualified-4" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
          <p>
             <a href="#narrative-example-qualified-4"/>Example 9</a>:
          </p>
@@ -190,7 +190,7 @@
        </p>
 
 
-      <div about="#narrative-example-qualified-5" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
+      <div id="narrative-example-qualified-5" about="#narrative-example-qualified-5" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
          <p>
             <a href="#narrative-example-qualified-5"/>Example 10</a>:
          </p>
@@ -202,7 +202,7 @@
         </div>
       </div>
 
-      <div about="#narrative-example-qualified-6" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
+      <div id="narrative-example-qualified-6" about="#narrative-example-qualified-6" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
          <p>
             <a href="#narrative-example-qualified-6"/>Example 11</a>:
          </p>
