save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -105,7 +105,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
          Thus, the permalink to the latest version (<code>ex:more-crime-happens-in-cities</code>) remains the same in the new revision, but a different URL is given for its snapshot (<code>ex:postContent1</code>).
 		   </p>		   
 		   
-		 <div about="#narrative-example-expanded-1-a" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
+		 <div id="narrative-example-expanded-1-a" about="#narrative-example-expanded-1-a" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
            <p>Shortly after Derek's post publication, ex:monica adapts the text for a wider audience in a new post (<code>ex:post9822</code>). This version is a specialization of the original post,
 		   and an alternate of the version modified by Derek. Since the provenance produced by the activities of Derek and Monica correspond to different user views, the system
 		   automatically publish it in different <a href="#Bundle" class="qname">prov:Bundle</a>s (<code>ex:bundlePost and ex:bundlePost1</code>).
@@ -117,7 +117,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
                  class="example">{% escape %}{% include "includes/prov/examples/eg-25-extended-crime-file-example/rdf/extended-crime-file-pt1_a.ttl" %}{% endescape %}</pre> 
         </div>
 		   
-         <div about="#narrative-example-expanded-2" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
+         <div id="narrative-example-expanded-2" about="#narrative-example-expanded-2" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
             <p>Some time passes by, and John writes his own conclusions quoting the previous two posts:
             </p> 
             <p>   
@@ -135,7 +135,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 		   invalidates the entity automatically and notifies John about the error.
 		   </p> 		   
 		   
-         <div about="#narrative-example-expanded-3" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
+         <div id="narrative-example-expanded-3" about="#narrative-example-expanded-3" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
             <p>   
                <a href="#narrative-example-expanded-3"/>Example 5</a>:
             </p>
