--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -73,7 +73,7 @@
       <p>The <strong>fourth</strong> category describes the lifetime of an Entity beyond being <strong>generated</strong> by an Activity and <strong>used</strong> by other Activities. For example, a painting could not have been displayed before it was painted, and it could not be sold after it was destroyed by fire. 
       Similar to how Activities have start and end times, an Entity may be bound by points in time for which it was generated or is no longer usable. 
 The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a> and <a href="#invalidatedAtTime" class="qname">prov:invalidatedAtTime</a> can be used to bound the starting and ending moments of an Entity's existence. The Activities that led to the generation or invalidation of an Entity can be provided using <span class="repeated">prov:wasGeneratedBy</span> and <a href="#wasInvalidatedBy" class="qname">prov:wasInvalidatedBy</a>, respectively. 
-<a href="#generated" class="qname">prov:generated</a> and <a href="#invalidated" class="qname">prov:invalidated</a> are the inverses of <span class="repeated">prov:wasGeneratedBy</span> and <span class="repeated">prov:wasInvalidatedBy</span>, respectively, and are defined to facilitate Activity-centric in addition to Entity-centric modeling. 
+<a href="#generated" class="qname">prov:generated</a> and <a href="#invalidated" class="qname">prov:invalidated</a> are the inverses of <span class="repeated">prov:wasGeneratedBy</span> and <span class="repeated">prov:wasInvalidatedBy</span>, respectively, and are defined to facilitate Activity-as-subject as well as Entity-as-subject descriptions. 
       </p>
 
       <p>The <strong>fifth</strong> category describes the lifetime of an Activity beyond its start and end times and predecessor Activities.  
@@ -106,7 +106,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 		   </p>		   
 		   
 		 <div id="narrative-example-expanded-1-a" about="#narrative-example-expanded-1-a" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-           <p>Shortly after Derek's post publication, ex:monica adapts the text for a wider audience in a new post (<code>ex:post9822</code>). This version is a specialization of the original post,
+           <p>Shortly after Derek's post publication, Monica adapts the text for a wider audience in a new post (<code>ex:post9822</code>). This version is a specialization of the original post,
 		   and an alternate of the version modified by Derek. Since the provenance produced by the activities of Derek and Monica correspond to different user views, the system
 		   automatically publish it in different <a href="#Bundle" class="qname">prov:Bundle</a>s (<code>ex:bundlePost and ex:bundlePost1</code>).
             </p> 		   
