--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -37,10 +37,7 @@
 
       <p>
        The qualification classes and properties shown in the previous two tables can also be found in the <a href="#cross-reference">cross reference</a> 
-        in the next section of this document. If the property can be qualified, the <strong>can be qualified with</strong>
-         header indicates the qualifying property and influence class that should be used.
-         Conversely, the <strong>qualifies</strong> headers in the listings for qualification terms indicate the unqualified property that they qualify.
-      In the OWL file iteself, the annotation properties <span class="qname">prov:qualifiedForm</span> and <span class="qname">prov:unqualifiedForm</span> provide the same linkages between the unqualified properties and their qualifiying terms.
+        in the next section of this document. 
 
          All influence classes (e.g. <span class="repeated">prov:Association</span>, <span class="repeated">prov:Usage</span>) are extensions of 
          <a class="qname" href="#Influence">prov:Influence</a> and either 
